--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -1,11 +1,11 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">Snacks &amp; Munchies</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white">Snacks &amp; Munchies</h2>
   </div>
 
   <div class="container">
-    <div class="product-desc">
+    <div class="product-desc get-up brand-brown-bg white rel">
       <p>We have created a whole range of healthy, deliious and tasty snacks so that you never miss out on your favourite treat. The best part is that all these munchies are all far lower in calories than their off-the-self versions and many of them are
         even tastier.</p>
     </div>
