--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -1,11 +1,11 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">Image Consulting</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white">Image Consulting</h2>
   </div>
 
   <div class="container">
-    <div class="consult-detail get-up">
+    <div class="consult-detail get-up brand-brown-bg white rel">
       <p>An AICI consultant, Tina is a PersonalImage consultant, Corporate Speaker and Personal Stylist.She has a masters degree in Luxury Marketing and Management fom France. She has practiced her image and Grooming skills in the luxury industry in fashion across the globe in France, Germany, China and Hong Kong.</p>
       <p>Tina hopes to empower people by teaching them the power of Image and Personal Branding.</p>
       <p>Her personal styling services caters to clients at all ages from 14 years onwards men, women and younger girls. Her services involve personal styling for men and women, bridal and trousseau services as well as corporate image management.</p>
@@ -22,7 +22,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">The <span>Analysis</span></h3>
+              <h3 class="text-uppercase brand-primary">The <span>Analysis</span></h3>
             </div>
             <p>Discover your best colors, body shape to know you best fit and style</p>
           </div>
@@ -32,7 +32,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Wardrobe <span>Management</span></h3>
+              <h3 class="text-uppercase brand-primary">Wardrobe <span>Management</span></h3>
             </div>
             <p>Develop a wardrobe that projects your personality</p>
           </div>
@@ -44,7 +44,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">The <span>Grooming</span></h3>
+              <h3 class="text-uppercase brand-primary">The <span>Grooming</span></h3>
             </div>
             <p>Basic Makeup application &amp; Hair styling</p>
           </div>
@@ -54,7 +54,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Personalized <span>Shopping</span></h3>
+              <h3 class="text-uppercase brand-primary">Personalized <span>Shopping</span></h3>
             </div>
             <p>Sttyling &amp; enhancing the way your dress</p>
           </div>
@@ -66,7 +66,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Advanced <span>Make-up</span></h3>
+              <h3 class="text-uppercase brand-primary">Advanced <span>Make-up</span></h3>
             </div>
             <p>Advanced makeup application &amp; Makeup buying for the client</p>
           </div>
@@ -76,7 +76,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Personalized <span>Styling</span></h3>
+              <h3 class="text-uppercase brand-primary">Personalized <span>Styling</span></h3>
             </div>
             <p>Building the wardrobe - Learn how to shop future</p>
           </div>
@@ -88,7 +88,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Hair <span>&amp; Styling</span></h3>
+              <h3 class="text-uppercase brand-primary">Hair <span>&amp; Styling</span></h3>
             </div>
             <p>care &amp; styling &amp; quick tips for easy maintenance</p>
           </div>
@@ -98,7 +98,7 @@
           <div class="single-consult">
             <div class="consult-title">
               <img src="" alt="">
-              <h3 class="text-uppercase">Accessorizing <span>&amp; Styling</span></h3>
+              <h3 class="text-uppercase brand-primary">Accessorizing <span>&amp; Styling</span></h3>
             </div>
             <p>Accessorizing and styling with statement pieces</p>
           </div>
@@ -110,7 +110,7 @@
 
   <div class="we-enroll">
     <div class="container">
-      <h2 class="text-uppercase">How do we enroll:</h2>
+      <h2 class="text-uppercase text-center">How do we enroll:</h2>
 
       <div class="session-one">
         <div class="row">
@@ -120,19 +120,25 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <div class="session-number">
-                    <h3>2</h3>
-                    <h4 class="text-uppercase">Sessions</h4>
+                  <div class="session-number brand-primary-bg text-center">
+                    <span>2</span>
+                    <h4 class="text-uppercase white">Sessions</h4>
                   </div>
                 </div>
 
-                <div class="session-charges">
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Charges</p>
-                    <p>Rs 10000</p>
-                  </div>
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Pick any 2 of the above services</p>
+                <div class="col-md-8">
+                  <div class="session-charges brand-brown-bg text-center">
+                  <div class="row">
+                      <div class="col-md-6">
+                        <div class="inner-session">
+                          <p class="text-uppercase white charge">Charges</p>
+                          <p>Rs 10000</p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="text-uppercase services"><span>Pick any 2</span> of the above services</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
@@ -145,19 +151,25 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <div class="session-number">
-                    <h3>8</h3>
-                    <h4 class="text-uppercase">Sessions</h4>
+                  <div class="session-number brand-primary-bg text-center">
+                    <span>8</span>
+                    <h4 class="text-uppercase white">Sessions</h4>
                   </div>
                 </div>
 
-                <div class="session-charges">
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Charges</p>
-                    <p>Rs 27500</p>
-                  </div>
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Pick any 8 of the above services</p>
+                <div class="col-md-8">
+                  <div class="session-charges brand-brown-bg text-center">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="inner-session">
+                          <p class="text-uppercase white charge">Charges</p>
+                          <p>Rs 27500</p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="text-uppercase services"><span>Pick any 8</span> of the above services</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
@@ -175,19 +187,25 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <div class="session-number">
-                    <h3>4</h3>
-                    <h4 class="text-uppercase">Sessions</h4>
+                  <div class="session-number brand-primary-bg text-center">
+                    <span>4</span>
+                    <h4 class="text-uppercase white">Sessions</h4>
                   </div>
                 </div>
 
-                <div class="session-charges">
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Charges</p>
-                    <p>Rs 15000</p>
-                  </div>
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Pick any 4 of the above services</p>
+                <div class="col-md-8">
+                  <div class="session-charges brand-brown-bg text-center">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="inner-session">
+                          <p class="text-uppercase white charge">Charges</p>
+                          <p>Rs 15000</p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="text-uppercase services"><span>Pick any 4</span> of the above services</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
@@ -200,19 +218,25 @@
               <div class="row">
 
                 <div class="col-md-4">
-                  <div class="session-number">
-                    <h3>12</h3>
-                    <h4 class="text-uppercase">Sessions</h4>
+                  <div class="session-number brand-primary-bg text-center">
+                    <span class="twelve">12</span>
+                    <h4 class="text-uppercase white">Sessions</h4>
                   </div>
                 </div>
 
-                <div class="session-charges">
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Charges</p>
-                    <p>Rs 42500</p>
-                  </div>
-                  <div class="col-md-4">
-                    <p class="text-uppercase">Make your plan with tina</p>
+                <div class="col-md-8">
+                  <div class="session-charges brand-brown-bg text-center">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="inner-session">
+                          <p class="text-uppercase white charge">Charges</p>
+                          <p>Rs 42500</p>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <p class="text-uppercase services">Make your plan with tina</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
 
