--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -106,6 +106,7 @@
     p { font-size: 16px; }
   }
 }
+.rel { position: relative; }
 
 // ///////////////////////
 // CAROUSEL
@@ -125,3 +126,96 @@
   }
 }
 .carousel-indicators { display: none; }
+
+// Health Packages
+.what-health-goal {
+  @include margin(50px 0);
+  h2 {
+    @include margin(0 0 40px);
+    font-weight: 700;
+  }
+  .health-goals {
+    @include padding(50px 0);
+    .weight-goal, .health-manage-goal {
+      @include margin(0 20px);
+      @include padding(20px);
+      border: 2px solid $brand-primary;
+      h3, p { font-weight: bold; }
+      .btn-packages {
+        @include margin(20px 0 0 0);
+        @include padding(12px 35px);
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+// Image Consulting
+.consult-detail { font-size: 16px; }
+.consults {
+  @include margin(100px 0 0);
+  .single-consult {
+    .consult-title {
+      h3 {
+        font-size: 34px;
+        font-weight: bold;
+        span {
+          position: relative;
+          display: block;
+        }
+      }
+    }
+    p { font-size: 16px; }
+  }
+}
+.we-enroll {
+  @include margin(0 0 100px);
+  h2 {
+    @include margin(100px 0);
+    font-weight: bold;
+  }
+  .session-one, .session-two {
+    .session-number {
+      border-radius: 10px;
+      span {
+        @include margin(-25px 0 0 0);
+        @include padding(0 25px);
+        display: inline-block;
+        background-color: white;
+        font-size: 54px;
+        font-weight: bold;
+        border: 5px solid $brand-primary;
+        border-radius: 50%;
+      }
+      h4 {
+        @include padding(0 0 10px 0);
+        font-size: 28px;
+        font-weight: bold;
+      }
+      .twelve { @include padding(0 15px); }
+    }
+    .session-charges {
+      @include margin(0 0 0 -22px);
+      @include padding(23px 0 15px);
+      border-radius: 10px;
+      .inner-session {
+        border-right: 3px solid white;
+      }
+      .charge {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      p + p {
+        @include margin(-10px 0 0 0);
+        font-size: 28px;
+      }
+      .services {
+        @include margin(-10px 0 0 -18px);
+        @include padding(0 21px);
+        font-size: 20px;
+        span { font-weight: bold; }
+      }
+    }
+  }
+  .session-two { @include margin(100px 0 0 0);}
+}
