--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -1,30 +1,31 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">Health Packages</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white">Health Packages</h2>
   </div>
 
   <div class="what-health-goal">
     <h2 class="text-uppercase text-center">Whats your health goal?</h2>
 
-    <div class="health-goals">
+    <div class="health-goals brand-brown-bg">
       <div class="container">
         <div class="row">
 
           <div class="col-md-6">
-            <div class="weight-goal text-center">
-              <img src="" alt="">
+            <div class="weight-goal text-center brand-primary brand-brown-light-bg">
+              <img src="img/packages/1.png" alt="">
               <h3 class="text-uppercase">Weight Loss</h3>
               <p class="text-uppercase">(Includes health management)</p>
-              <a href="" class="btn btn-primary text-uppercase">Know More</a>
+              <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
 
           <div class="col-md-6">
-            <div class="health-manage-goal text-center">
-              <img src="" alt="">
+            <div class="health-manage-goal text-center brand-primary brand-brown-light-bg">
+              <img src="img/packages/2.png" alt="">
               <h3 class="text-uppercase">Health Management</h3>
-              <a href="" class="btn btn-primary text-uppercase">Know More</a>
+              <p class="text-uppercase">&nbsp;</p>
+              <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
 
