--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -1,75 +1,140 @@
 <div class="health-management">
-    <div class="banner selfcare-image">
-      <img src="img/apple.jpg" alt="">
-        <div class="get-center">
-            <h2 class="text-uppercase letter-space white">health management</h2>
-        </div>
+  <div class="banner selfcare-image">
+    <img src="img/apple.jpg" alt="">
+    <div class="get-center">
+      <h2 class="text-uppercase letter-space white">health management</h2>
     </div>
-    <div class="container">
-        <div class="get-up brand-brown-bg relate">
-            <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. A right plan can contribute significantly to recover from lifestyle, hormonal and genetics related disorder. We provide a tailor made diet plan to overcome these health and well being complaints and also target weight loss.  Along with nutritional advice we examine stipulated blood test to see if you are genetically pre-disposed to any health ailments will also recommend vitamins to help keep future disorder at bay. These are specialized plans aimed at individual with particular needs such as pregnancy, weight gain, inch loss etc. A personalized and detailed diet chart will be created to meet your specific requirements.</p>
-        </div>
+  </div>
+  <div class="container">
+    <div class="get-up brand-brown-bg relate">
+      <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. A right plan can contribute significantly to recover from lifestyle, hormonal and genetics related disorder. We provide a tailor made diet plan
+        to overcome these health and well being complaints and also target weight loss. Along with nutritional advice we examine stipulated blood test to see if you are genetically pre-disposed to any health ailments will also recommend vitamins to help
+        keep future disorder at bay. These are specialized plans aimed at individual with particular needs such as pregnancy, weight gain, inch loss etc. A personalized and detailed diet chart will be created to meet your specific requirements.</p>
     </div>
     <div class="health-manageselect">
-        <div class="managecat inline-block">
+      <div class="row-flex">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">alment control</figcaption>
+              <a href="">
+                <div class="category-imghold  round">
+                  <img src="img/health/ailment.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">alment control</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">healthy ageing</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/ageing.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">healthy ageing</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">lactation</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/lactation.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">lactation</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">senior citizen</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/senior.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">senior citizen</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">super kids</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/kids.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">super kids</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+      </div>
+      <div class="row-flex">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">pregnancy</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/pregnancy.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">pregnancy</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">weight gain</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/weight-gain.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">weight gain</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">inch loss</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/loss.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">inch loss</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">cool suclpting</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/suclpting.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">cool suclpting</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
-         <div class="managecat inline-block">
+        <div class="col-flex">
+          <div class="managecat text-center">
             <figure>
-                <img src="" alt="" class="img-responsive">
-                <figcaption class="text-center text-uppercase">post cancer</figcaption>
+              <a href="">
+                <div class="category-imghold round">
+                  <img src="img/health/cancer.png" alt="" class="img-responsive">
+                </div>
+                <figcaption class="text-uppercase brand-brown-dark text-bold">post cancer</figcaption>
+              </a>
             </figure>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </div>
