--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,7 +31,6 @@
   font-family: 'Glyphicons Halflings';
   src: url('../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.eot'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.woff) format('woff'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf) format('truetype'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.svg) format('svg');
 }
-
 /* Bootstrap Variables Goes Here */
 //$brand-primary: #0d9dff !default;
 $brand-success: #84ce3c !default;
@@ -133,7 +132,6 @@ $instagram: #396d9a !default;
 .brand-graylight-bg {
   background-color: $brand-graylight;
 }
-
 //button
 .btn-yellow {
   @include button-variant(white, $brand-yellow, $brand-yellow);
@@ -214,7 +212,9 @@ form .form-control {
 textarea {
   resize: none;
 }
-
+.v-top {
+  vertical-align: top;
+}
 // Class
 .relate {
   position: relative;
@@ -274,10 +274,12 @@ button {
     font-size: 24px;
   }
 }
+.round {
+  border-radius: 100%;
+}
 .letter-space {
   letter-spacing: 1px;
 }
-
 /* Start writing sass here */
 ///////////////
 //Home/////////
@@ -583,14 +585,210 @@ button {
   }
 }
 ///end home///
-
 /////////////////////
 ////Health-Management
 ////////////////////
 .health-descp {
   font-size: 16px;
 }
-
+.healthchart-list {
+  margin: 60px 0;
+}
+.health-manageselect {
+  .managecat {
+    margin: 30px 0;
+    .category-imghold {
+      @include square(180px);
+      @extend.m-center;
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+    figcaption {
+      margin: 10px 0;
+    }
+  }
+}
+.health-heading {
+  margin: 0 0 25px;
+}
+.consult-chart {
+  width: 100px;
+  height: 70px;
+  border-radius: 6px;
+  background-color: $brand-primary;
+  font-size: 16px;
+  .noconsult {
+    width: 45px;
+    height: 45px;
+    border: 4px solid $brand-primary;
+    border-radius: 100%;
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    background-color: #fff;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    @include transform(translateX(-50%));
+  }
+  .consult {
+    margin-top: 40px;
+    display: block;
+    @extend.letter-space;
+  }
+}
+.tab-chart {
+  width: 85%;
+  border: 2px solid $brand-brown;
+  border-radius: 6px;
+  display: inline-block;
+  .chart-head {
+    text-align: center;
+    p {
+      margin: 0;
+      font-size: 17px;
+    }
+    .price {
+      font-size: 22px;
+    }
+  }
+  .chart-info {
+    padding: 30px;
+  }
+  .nav-tabs li:first-child a {
+    background-color: #fff;
+    padding: 4px 26px;
+    .chart-head {
+      p {
+        color: $brand-primary;
+      }
+      .price {
+        color: $brand-brown-dark;
+      }
+    }
+    &:hover {
+      background-color: #fff !important;
+      .chart-head {
+        p {
+          color: $brand-primary; 
+        }
+        .price {
+          color: $brand-brown-dark;
+        }
+      }
+    }
+    &:after {
+      content:"";
+      display: none;
+    }
+  }
+  .nav-tabs li.active:first-child a {
+    background-color: #fff;
+    .chart-head {
+      p {
+        color: $brand-primary;
+      }
+      .price {
+        color: $brand-brown-dark;
+      }
+    }
+    &:after {
+      content: "";
+      display: none;
+    }
+  }
+  .nav-tabs {
+    background-color: $brand-brown;
+    border: none;
+    li {
+      margin: 0 4px -2px 0;
+      a {
+        border-radius: 6px;
+        border: none;
+        padding: 6px 26px;
+        &:hover {
+          background-color: $brand-primary;
+          color: #fff;
+          &:after {
+            content: "";
+            border-top: 40px solid transparent;
+            border-bottom: 40px solid $brand-primary;
+            border-left: 40px solid transparent;
+            border-right: 40px solid transparent;
+            border-radius: 100%;
+            position: absolute;
+            bottom: -9px;
+            left: 50%;
+            z-index: -1;
+            @include transform(translateX(-50%));
+            .chart-head {
+              p {
+                color: #fff;
+              }
+            }
+          }
+        }
+      }
+    }
+    li.active {
+      a {
+        border: none;
+        background-color: $brand-primary;
+        color: #fff;
+        &:after {
+          content: "";
+          border-top: 40px solid transparent;
+          border-bottom: 40px solid $brand-primary;
+          border-left: 40px solid transparent;
+          border-right: 40px solid transparent;
+          border-radius: 100%;
+          position: absolute;
+          bottom: -9px;
+          left: 50%;
+          z-index: -1;
+          @include transform(translateX(-50%));
+          .chart-head {
+            p {
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.tab-head {
+  margin-bottom: 30px;
+}
+.tab-body {
+  h5 {
+    font-size: 20px;
+    color: $brand-brown-dark;
+  }
+  .chart-list {
+    li {
+      margin-bottom: 7px;
+      color: $brand-primary;
+    }
+  }
+}
+.tab-foot {
+  .tab-footinfo {
+    display: inline-block;
+    width: 55%;
+  }
+  .plan {
+    width: 44%;
+    display: inline-block;
+    text-align: right;
+    .note {
+      font-style: italic;
+      display: block;
+    }
+  }
+}
 //end Health-management////
 ///////////////
 //Footer///////
@@ -692,6 +890,5 @@ footer {
     letter-spacing: 2px;
   }
 }
-
 //////end footer/////
 @import "harsh";
