--- a/views/content/team.html
+++ b/views/content/team.html
@@ -18,7 +18,7 @@
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/hiral.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -55,7 +55,7 @@ She consults clients at Selfcare’s Tardeo branch  as well as handles our onlin
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/vibha.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -76,7 +76,7 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/deepti.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -95,7 +95,7 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/adity.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -114,7 +114,7 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/dipti.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -132,7 +132,7 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
         <div class="row">
           <div class="col-md-2">
             <div class="member-image">
-              <img src="" alt="" class="doneloading">
+              <img src="img/team/shaikh.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
@@ -150,11 +150,8 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
       <div class="team-nav text-center">
         <ul class="pagination">
-          <li><a href="#">1</a></li>
+          <li><a href="#" class="active">1</a></li>
           <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
         </ul>
       </div>
     </div>
