--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -16,95 +16,113 @@
 
   <div class="consults">
     <div class="container">
-      <div class="row">
+      <div class="inner-consults">
+        <div class="row">
 
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">The <span>Analysis</span></h3>
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/analysis.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">The <span>Analysis</span></h3>
+                <p>Discover your best colors, body shape to know you best fit and style</p>
+              </div>
             </div>
-            <p>Discover your best colors, body shape to know you best fit and style</p>
+          </div>
+
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/wardrobe.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Wardrobe <span>Management</span></h3>
+                <p>Develop a wardrobe that projects your personality</p>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Wardrobe <span>Management</span></h3>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/grooming.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">The <span>Grooming</span></h3>
+                <p>Basic Makeup application &amp; Hair styling</p>
+              </div>
             </div>
-            <p>Develop a wardrobe that projects your personality</p>
+          </div>
+
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/shopping.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Personalized <span>Shopping</span></h3>
+                <p>Sttyling &amp; enhancing the way your dress</p>
+              </div>
+            </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/make-up.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Advanced <span>Make-up</span></h3>
+                <p>Advanced makeup application &amp; Makeup buying for the client</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/styling.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Personalized <span>Styling</span></h3>
+                <p>Building the wardrobe - Learn how to shop future</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/hair.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Hair <span>&amp; Styling</span></h3>
+                <p>care &amp; styling &amp; quick tips for easy maintenance</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="single-consult">
+              <div class="consult-image">
+                <img src="img/consulting/accessories.png" alt="" class="img-responsive">
+              </div>
+              <div class="consult-title">
+                <h3 class="text-uppercase brand-primary font-semibold">Accessorizing <span>&amp; Styling</span></h3>
+                <p>Accessorizing and styling with statement pieces</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">The <span>Grooming</span></h3>
-            </div>
-            <p>Basic Makeup application &amp; Hair styling</p>
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Personalized <span>Shopping</span></h3>
-            </div>
-            <p>Sttyling &amp; enhancing the way your dress</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Advanced <span>Make-up</span></h3>
-            </div>
-            <p>Advanced makeup application &amp; Makeup buying for the client</p>
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Personalized <span>Styling</span></h3>
-            </div>
-            <p>Building the wardrobe - Learn how to shop future</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Hair <span>&amp; Styling</span></h3>
-            </div>
-            <p>care &amp; styling &amp; quick tips for easy maintenance</p>
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="single-consult">
-            <div class="consult-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Accessorizing <span>&amp; Styling</span></h3>
-            </div>
-            <p>Accessorizing and styling with statement pieces</p>
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
 
