--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -5,21 +5,22 @@
   </div>
 
   <div class="container">
-    <div class="get-up brand-brown-bg rel">
-      <h3 class="text-uppercase">What is health design</h3>
-      <p class="health-style">Only the fit know how fabulous it feels.</p>
+    <div class="about-desc get-up brand-brown-bg white rel">
+      <h3 class="text-uppercase font-semibold">What is health design</h3>
+      <p class="health-style font-baubodi">Only the fit know how fabulous it feels.</p>
       <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
     </div>
   </div>
 
   <div class="about-health brand-brown-bg">
     <div class="container">
-      <h2>Health is, after all, about a state of absolute harmony-- of thebody, mind and spirit.</h2>
+      <h2 class="brand-brown-dark font-baubodi">Health is, after all, about a state of absolute harmony—of the body, mind and spirit.</h2>
       <div class="about-health-content brand-brown-light-bg">
         <div class="row">
           <div class="col-md-5">
             <div class="embed-youtube">
               <!-- Youtube video -->
+              <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-md-7">
@@ -27,10 +28,10 @@
             <carousel interval="sliderInterval" no-wrap="noWrapSlides">
               <slide ng-repeat="slide in aboutSlides" active="slide.active">
                 <div class="inner-about-carousel">
-                  <h3 class="text-uppercase text-center text-bold">{{slide.title}}</h3>
-                  <span class="text-center text-bold">{{slide.text}}</span>
+                  <h3 class="text-uppercase text-center font-semibold">{{slide.title}}</h3>
+                  <span class="text-center font-semibold">{{slide.text}}</span>
                   <hr>
-                  <p class="text-left">{{slide.desc}}</p>
+                  <p class="text-left brand-primary">{{slide.desc}}</p>
                 </div>
               </slide>
             </carousel>
@@ -42,15 +43,15 @@
 
   <div class="what-we-do">
     <div class="container">
-      <h2 class="text-uppercase text-center brand-brown-dark">This is what we are also doing:</h2>
+      <h2 class="text-uppercase text-center brand-brown-dark font-semibold">This is what we are also doing:</h2>
       <p class="text-center">As the industry experts in diet, health and food management, this is what we have already consulted on:</p>
       <div class="row">
 
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Cool<span>Sculpting</span></h3>
+              <img src="img/about/sculpting.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Cool<span>Sculpting</span></h3>
             </div>
             <p>Cool Sculpting is a leading fat loss technology that has set new standards for non-invasive fat reduction.</p>
           </div>
@@ -59,8 +60,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Health Checks<span>&amp; Presentations</span></h3>
+              <img src="img/about/checks.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Health Checks<span>&amp; Presentations</span></h3>
             </div>
             <p>We give corporate/ clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
           </div>
@@ -71,8 +72,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Health<span>Foods</span></h3>
+              <img src="img/about/foods.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Health<span>Foods</span></h3>
             </div>
             <p>New food products are tried, tested and constantly added to our in-house health shop. This includes Selfcare food products and Suman's cookbooks. These products also available online.</p>
           </div>
@@ -81,8 +82,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Corporate<span>Care Programmes</span></h3>
+              <img src="img/about/workers.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Corporate<span>Care Programmes</span></h3>
             </div>
             <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips</p>
           </div>
@@ -92,9 +93,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="we-do-topics">
-            <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Nutrigenomics</h3>
+            <div class="we-do-title nutri">
+              <img src="img/about/dna.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Nutrigenomics</h3>
             </div>
             <p>Synchronising our unique DNA blueprint with our diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine</p>
           </div>
@@ -103,8 +104,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">School<span>Meals</span></h3>
+              <img src="img/about/plate.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">School<span>Meals</span></h3>
             </div>
             <p>We are consultants for a few exclusive schools where we outline and create wholesome, fun meals for the school canteen menu. We provide health checks for stressed out teenagers; specially designed and fine-tuned for VIII, IX and X class kids.</p>
           </div>
@@ -115,8 +116,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Image<span>Consulting</span></h3>
+              <img src="img/about/consulting.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Image<span>Consulting</span></h3>
             </div>
             <p>A Reflection of our personality, our visual appearance creates the first &amp; lasting impression on the opposite person’s mind.</p>
           </div>
@@ -125,8 +126,8 @@
         <div class="col-md-6">
           <div class="we-do-topics">
             <div class="we-do-title">
-              <img src="" alt="">
-              <h3 class="text-uppercase brand-primary">Training<span>Programme</span></h3>
+              <img src="img/about/training.png" alt="" class="img-responsive">
+              <h3 class="text-uppercase brand-primary font-semibold">Training<span>Programme</span></h3>
             </div>
             <p>We recently launched a six week training programme for nutritionists.</p>
           </div>
