--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">Contact Us</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white">Contact Us</h2>
   </div>
 
   <div class="contact-location">
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="mumbai">
-            <h4 class="text-uppercase">Mumbai</h4>
+            <h4 class="text-uppercase brand-brown-dark font-semibold">Mumbai</h4>
 
             <div class="tardeo">
               <p>Head Office, Tardeo</p>
