--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -1,10 +1,3 @@
-.font-primary { font-family: $font-family-sans-serif; }
-.font-light { font-family: $font-family-light; }
-.font-semibold { font-family: $font-family-semibold; }
-.font-book { font-family: $font-family-book; }
-.font-vista { font-family: $font-vista; }
-.font-baubodi { font-family: $font-baubodi; }
-
 // //////////////////////////////////
 // HEADER
 // //////////////////////////////////
@@ -328,10 +321,34 @@
 // Contact Us
 .contact-location {
   @include margin(50px 0);
-  .mumbai {
-    h4 {
-      font-size: 28px;
-      letter-spacing: 3px;
+  .mumbai, .kolkata {
+    @include margin(0 0 20px);
+    letter-spacing: 2px;
+    .tardeo { @include margin(0 0 20px); }
+    h4 { font-size: 28px; }
+    p {
+      @include margin(0);
+      font-size: 20px;
     }
+  }
+}
+.contact-query {
+  h4 {
+    font-size: 28px;
+    letter-spacing: 3px;
+  }
+  form { @include margin(10px 0 50px); }
+  .form-group {
+    .form-control {
+      font-size: 16px;
+      font-style: italic;
+      border: 1px solid $brand-primary;
+      border-radius: 0;
+    }
+    textarea { @include size(100%, 100px); }
+  }
+  .submit-button {
+    @include margin(20px 0 0);
+    a { @include padding(15px 70px); }
   }
 }
