--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -12,7 +12,7 @@
             <h4 class="text-uppercase brand-brown-dark font-semibold">Mumbai</h4>
 
             <div class="tardeo">
-              <p>Head Office, Tardeo</p>
+              <p class="brand-primary">Head Office, Tardeo</p>
               <span>432/432/403, Arun Chambers,</span>
               <br>
               <span>Next to A/C Market,</span>
@@ -23,11 +23,11 @@
               <br>
               <span>f: <a href="tel:02261312200">022 61312200</a></span>
               <br>
-              <a href="" class="text-uppercase">View Map</a>
+              <a href="" class="text-uppercase brand-teal">View Map</a>
             </div>
 
             <div class="santacruz">
-              <p>Santacruz</p>
+              <p class="brand-primary">Santacruz</p>
               <span>1st floor, Sanghvi Udayan, V L Mehta</span>
               <br>
               <span>Marg, JVPD scheme, Vile Parle</span>
@@ -38,7 +38,7 @@
               <br>
               <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>, <a href="tel:+912226109432">+91 22-26109432</a></span>
               <br>
-              <a href="" class="text-uppercase">View Map</a>
+              <a href="" class="text-uppercase brand-teal">View Map</a>
             </div>
           </div>
 
@@ -54,7 +54,7 @@
             <br>
             <span>t: <a href="tel:9339564578">9339564578</a></span>
             <br>
-            <a href="" class="text-uppercase">View Map</a>
+            <a href="" class="text-uppercase brand-teal">View Map</a>
           </div>
         </div>
 
@@ -62,7 +62,7 @@
           <!-- Map -->
           <div class="contact-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.0566089680547!2d72.81150841509329!3d18.973107187147065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ce7051b84445%3A0x1474fecba24a5185!2sArun+Chambers%2C+Tardeo+Rd%2C+Janata+Nagar%2C+Tardeo%2C+Mumbai%2C+Maharashtra+400034!5e0!3m2!1sen!2sin!4v1451038314725"
-            width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            width="100%" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -72,6 +72,7 @@
   <div class="contact-query">
     <div class="container">
       <div class="row">
+        <h4 class="text-uppercase text-center brand-brown-dark font-semibold">Send your query</h4>
         <div class="col-md-offset-2 col-md-8">
           <form action="">
             <div class="row">
